Update project images with new filenames

--- a/projects.html
+++ b/projects.html
@@ -10,19 +10,19 @@ title: Projects
 
     <div class="row">
       <div class="col-sm-4">
-        <img src="/JEAP/assets/img/project1.jpg" class="img-responsive" alt="Project 1">
+        <img src="/JEAP/assets/img/1.jpeg" class="img-responsive" alt="Project 1">
         <h4>Project Title 1</h4>
         <p>Project description here.</p>
       </div>
 
       <div class="col-sm-4">
-        <img src="/JEAP/assets/img/project2.jpg" class="img-responsive" alt="Project 2">
+        <img src="/JEAP/assets/img/2.jpeg" class="img-responsive" alt="Project 2">
         <h4>Project Title 2</h4>
         <p>Project description here.</p>
       </div>
 
       <div class="col-sm-4">
-        <img src="/JEAP/assets/img/project3.jpg" class="img-responsive" alt="Project 3">
+        <img src="/JEAP/assets/img/3.jpeg" class="img-responsive" alt="Project 3">
         <h4>Project Title 3</h4>
         <p>Project description here.</p>
       </div>
