Add projects section with project details
Added a new section to showcase projects with images and descriptions.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,37 @@ layout: default
   </div><!--//container-->
 </section><!--//about-->
 
+<!-- ******PROJECTS****** -->
+<section id="projects" class="projects section">
+  <div class="container text-center">
+    <h2 class="title">Our Projects</h2>
+    <p class="intro">Explore some of the key initiatives we are actively working on to empower communities and expand educational opportunities.</p>
+
+    <div class="row">
+
+      <div class="col-sm-4">
+        <img src="/JEAP/assets/img/1.jpeg" class="img-responsive center-block" alt="Project 1">
+        <h4>Project Title 1</h4>
+        <p>Short description for project 1.</p>
+      </div>
+
+      <div class="col-sm-4">
+        <img src="/JEAP/assets/img/2.jpeg" class="img-responsive center-block" alt="Project 2">
+        <h4>Project Title 2</h4>
+        <p>Short description for project 2.</p>
+      </div>
+
+      <div class="col-sm-4">
+        <img src="/JEAP/assets/img/3.jpeg" class="img-responsive center-block" alt="Project 3">
+        <h4>Project Title 3</h4>
+        <p>Short description for project 3.</p>
+      </div>
+
+    </div><!--//row-->
+  </div><!--//container-->
+</section><!--//projects-->
+
+
 <!-- ******JOIN****** -->
 <section id="join" class="join section">
   <div class="container text-center">
