--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
       <div class="navbar-collapse collapse" id="navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Home</a></li>
-          <li class="nav-item"><a href="/JEAP/projects.html">Projects</a></li>
+          <li class="nav-item"><a class="scrollto" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="scrollto" href="#about">About</a></li>
           <li class="nav-item"><a class="scrollto" href="#join">Join Us</a></li>
           <li class="nav-item"><a class="scrollto" href="#contact">Contact</a></li>
